@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.41"
 dotenv = "0.15.0"
+once_cell = "1.21.3"
 rand = "0.9.2"
 serenity = "0.12.4"
-tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
-once_cell = "1.21.3"
+tokio = { version = "1.47.0", features = ["rt-multi-thread"] }
